--- a/MyFirstGame.vcxproj
+++ b/MyFirstGame.vcxproj
@@ -155,7 +155,9 @@
     <ClInclude Include="Engine\Transform.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Main.h" />
+    <ClInclude Include="PlayScene.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="Stage.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="TestScene.h" />
   </ItemGroup>
@@ -174,6 +176,8 @@
     <ClCompile Include="Engine\Texture.cpp" />
     <ClCompile Include="Engine\Transform.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="PlayScene.cpp" />
+    <ClCompile Include="Stage.cpp" />
     <ClCompile Include="TestScene.cpp" />
   </ItemGroup>
   <ItemGroup>
