部t￥r￥￥ロック修正 光を強く 背景削除 モデルの上面と側面の１つがおかしい

--- a/MyFirstGame.vcxproj
+++ b/MyFirstGame.vcxproj
@@ -159,6 +159,7 @@
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Stage.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="Test.h" />
     <ClInclude Include="TestScene.h" />
   </ItemGroup>
   <ItemGroup>
@@ -178,6 +179,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="PlayScene.cpp" />
     <ClCompile Include="Stage.cpp" />
+    <ClCompile Include="Test.cpp" />
     <ClCompile Include="TestScene.cpp" />
   </ItemGroup>
   <ItemGroup>
